[package]
name = "cktap-direct-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "cktap-direct"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cktap-direct = { path = "../lib" }
clap = { version = "4.5.45", features = ["derive"] }
rpassword = { version = "7.4" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
bitcoin = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
strum = { version = "0.27", features = ["derive"] }

[features]
emulator = ["cktap-direct/emulator"]
